--- a/templates/report/prefix.html
+++ b/templates/report/prefix.html
@@ -29,9 +29,11 @@
 
 <h2 class="title">(Ot)her (Sec)urity (A)wareness</h2>
 
+<p class="link">Project: <a href="https://github.com/trimstray/otseca">https://github.com/trimstray/otseca </a></p>
+
 <p class="desc">
 Φ otseca __VERSION__ security audit script
 </p>
 <p class="date">
-__DATE__
+gen_time: __DATE__
 </p>
