html style: added p.desc - signed-off-by: trimstray <trimstray@gmail.com>

--- a/templates/report/prefix.html
+++ b/templates/report/prefix.html
@@ -31,9 +31,12 @@
 
 <p class="link">Project: <a href="https://github.com/trimstray/otseca">https://github.com/trimstray/otseca </a></p>
 
-<p class="desc">
+<p class="desc">Open source security auditing tool to search and dump system configuration.<br>It allows you to generate reports in HTML or RAW-HTML formats.</p>
+
+<p class="info">
 Φ otseca __VERSION__ security audit script
 </p>
+
 <p class="date">
 gen_time: __DATE__
 </p>
