--- a/templates/report/css/main.css
+++ b/templates/report/css/main.css
@@ -93,8 +93,18 @@ h2.title {
 
 p.desc {
   color: #111;
+  font-family: Lato-Regular;
+  font-size: 16px;
+  font-weight: 300;
+  line-height: 32px;
+  margin: 20px 0 2px;
+  text-align: center;
+}
+
+p.info {
+  color: #111;
   font-family: Lato-Bold;
-  font-size: 14px;
+  font-size: 15px;
   font-weight: 300;
   line-height: 32px;
   margin: 20px 0 2px;
