report style: updated and added output table - signed-off-by: trimstray <trimstray@gmail.com>

--- a/templates/report/css/main.css
+++ b/templates/report/css/main.css
@@ -183,7 +183,6 @@ p.link {
   width: 100%;
   min-height: 20vh;
   background: #fff;
-
   display: -webkit-box;
   display: -webkit-flex;
   display: -moz-box;
@@ -337,4 +336,54 @@ pre {
   .w {
     color: white;
   }
+}
+
+table.greyGridTable {
+  border: 2px solid #FFFFFF;
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+  text-align: center;
+  border-collapse: collapse;
+}
+
+table.greyGridTable td, table.greyGridTable th {
+  border: 1px solid #FFFFFF;
+  padding: 3px 4px;
+}
+
+table.greyGridTable tbody td {
+  font-size: 13px;
+}
+
+table.greyGridTable td:nth-child(even) {
+  background: #EBEBEB;
+}
+
+table.greyGridTable thead {
+  background: #FFFFFF;
+  border-bottom: 4px solid #003c43;
+}
+
+table.greyGridTable thead th {
+  font-size: 15px;
+  font-weight: bold;
+  color: #003c43;
+  text-align: center;
+  border-left: 2px solid #003c43;
+}
+
+table.greyGridTable thead th:first-child {
+  border-left: none;
+}
+
+table.greyGridTable tfoot {
+  font-size: 14px;
+  font-weight: bold;
+  color: #003c43;
+  border-top: 4px solid #003c43;
+}
+
+table.greyGridTable tfoot td {
+  font-size: 14px;
 }
