updated index.html - signed-off-by: trimstray <trimstray@gmail.com>

--- a/templates/report/index.html
+++ b/templates/report/index.html
@@ -97,8 +97,8 @@ gen_time: __DATE__
 </tr>
 <tr>
 <td>Other</td>
-<td><a href="other.all.log.html">other.all.log.html</td>
-<td>It contains all other tasks</td>
+<td><a href="external.all.log.html">external.all.log.html</td>
+<td>It contains all external tasks</td>
 </tr>
 </tbody>
 </table>
