--- a/templates/report/index.html
+++ b/templates/report/index.html
@@ -96,7 +96,7 @@ gen_time: __DATE__
 <td>It contains tasks related directly to the network stack</td>
 </tr>
 <tr>
-<td>Other</td>
+<td>External</td>
 <td><a href="external.all.log.html">external.all.log.html</td>
 <td>It contains all external tasks</td>
 </tr>
