added KERNEL_STACK - signed-off-by: trimstray <trimstray@gmail.com>

--- a/templates/report/index.html
+++ b/templates/report/index.html
@@ -76,6 +76,12 @@ gen_time: __DATE__
 <td>It contains tasks related directly to the system</td>
 </tr>
 <tr>
+<td>Kernel</td>
+<td><a href="kernel.all.log.html">kernel.all.log.html</td>
+<td>It contains tasks related directly to the kernel</td>
+</tr>
+<tr>
+<tr>
 <td>Permissions</td>
 <td><a href="permissions.all.log.html">permissions.all.log.html</td>
 <td>It contains tasks related directly to the permissions</td>
