added 'distro' report - signed-off-by: trimstray <trimstray@gmail.com>

--- a/templates/report/index.html
+++ b/templates/report/index.html
@@ -97,9 +97,14 @@ gen_time: __DATE__
 <td>It contains tasks related directly to the network stack</td>
 </tr>
 <tr>
+<td>Distribution</td>
+<td><a href="distro.all.log.html">distro.all.log.html</td>
+<td>It contains tasks related directly to the distribution stack</td>
+</tr>
+<tr>
 <td>External</td>
 <td><a href="external.all.log.html">external.all.log.html</td>
-<td>It contains all external tasks</td>
+<td>It contains all external (user) tasks</td>
 </tr>
 </tbody>
 </table>
